# pasa-research-fetcher

./: .gitignore  FINAL_SUMMARY.md  INSTALL.md  PUBLISHING_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: README.md  api-reference.md  cli-guide.md  completion-guarantee.md  examples.md  installation.md  troubleshooting.md
examples/: basic_usage.py  integration_example.py
src/pasa_research_fetcher/: __init__.py  cli.py  service.py
src/pasa_research_fetcher/core/: __init__.py  api_client.py  fetcher.py
src/pasa_research_fetcher/models/: __init__.py  config.py  paper.py
src/pasa_research_fetcher/scrapers/: __init__.py  arxiv_scraper.py
src/pasa_research_fetcher/utils/: __init__.py  cache.py  downloader.py  logger.py
tests/: __init__.py  test_api_client.py  test_cache.py  test_cli.py  test_models.py  test_service.py
